# server/src/main/kotlin/features/auth/session/RedirectSession.kt
@@ -1,0 +1,8 @@
+package jp.trap.mikke.features.auth.session
+
+import kotlinx.serialization.Serializable
+
+@Serializable
+data class RedirectSession(
+    val target: String,
+)
